stacks/trino-superset-s3/superset-ing.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: uc2-superset
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - uc2-superset.marispacex.demos.stackable.tech
    secretName: ingress-uc2-superset
  rules:
    - host: uc2-superset.marispacex.demos.stackable.tech
      http:
        paths:
          -   path: /
              pathType: Prefix
              backend:
                  service:
                      name: superset-external
                      port:
                          number: 8088
